feat: gloveVectoriser optimisation and change xgboost to log not print

--- a/data-augmentation-analysis.ipynb
+++ b/data-augmentation-analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +30,19 @@
     "DATA_DIR = Path('./data')\n",
     "TRAIN_PATH = DATA_DIR / 'train.csv'\n",
     "DEV_PATH = DATA_DIR / 'dev.csv'\n",
-    "AUGMENTED_DATA_PATH = DATA_DIR / 'train_augmented.csv'"
+    "AUGMENTED_DATA_PATH = DATA_DIR / 'train_augmented_high_replacement_fraction.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1509\n"
+      "4000\n"
      ]
     }
    ],
