feat: implemented a large deberta model with peft training

--- a/src/notebooks/sentence-transformer/sentence-transformer.ipynb
+++ b/src/notebooks/sentence-transformer/sentence-transformer.ipynb
@@ -33,7 +33,14 @@
     "from pathlib import Path\n",
     "from sentence_transformers import SentenceTransformer, losses, InputExample\n",
     "from sentence_transformers.evaluation import BinaryClassificationEvaluator\n",
-    "from transformers import EarlyStoppingCallback\n",
+    "from transformers import (\n",
+    "    AutoTokenizer,\n",
+    "    AutoModelForSequenceClassification,\n",
+    "    TrainingArguments,\n",
+    "    Trainer,\n",
+    "    EarlyStoppingCallback,\n",
+    "    AutoConfig\n",
+    ")\n",
     "from torch.utils.data import DataLoader, Dataset as TorchDataset\n",
     "from datasets import Dataset, DatasetDict\n",
     "\n",
@@ -65,11 +72,13 @@
    "outputs": [],
    "source": [
     "# Path configuration\n",
-    "DATA_DIR = Path('/Users/harvey/School/Year 3/NLU/comp34812/data/training_data/ED')\n",
-    "TRAIN_PATH = DATA_DIR / 'train.csv'\n",
-    "DEV_PATH = DATA_DIR / 'dev.csv'\n",
-    "MODEL_SAVE_PATH = Path('/Users/harvey/School/Year 3/NLU/comp34812/data/models')\n",
-    "MODEL_SAVE_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "DATA_DIR = Path(__file__).parent.parent / \"data\"\n",
+    "TRAIN_FILE = DATA_DIR / \"train.csv\"\n",
+    "DEV_FILE = DATA_DIR / \"dev.csv\"\n",
+    "AUG_TRAIN_FILE = DATA_DIR / \"train_augmented.csv\"\n",
+    "AUG_TRAIN_HIGH_REPLACEMENT_FILE = DATA_DIR / \"train_augmented_high_replacement_fraction.csv\"\n",
+    "SAVE_DIR = DATA_DIR / \"results\" / \"sentence-transformer\"\n",
+    "SAVE_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Training parameters\n",
     "BATCH_SIZE = 16\n",
@@ -141,8 +150,8 @@
     "def load_data():\n",
     "    \"\"\"Load and prepare the training and development datasets.\"\"\"\n",
     "    logging.info(\"Loading datasets...\")\n",
-    "    train_df = pd.read_csv(TRAIN_PATH)\n",
-    "    dev_df = pd.read_csv(DEV_PATH)\n",
+    "    train_df = pd.read_csv(TRAIN_FILE)\n",
+    "    dev_df = pd.read_csv(DEV_FILE)\n",
     "    \n",
     "    logging.info(f\"Training data shape: {train_df.shape}\")\n",
     "    logging.info(f\"Development data shape: {dev_df.shape}\")\n",
@@ -193,11 +202,11 @@
     "    epochs=NUM_EPOCHS,\n",
     "    evaluation_steps=1000,\n",
     "    warmup_steps=100,\n",
-    "    output_path=str(MODEL_SAVE_PATH),  # Apparently it should be a string? Idk\n",
+    "    output_path=str(SAVE_DIR / f\"{BASE_MODEL.split('/')[-1]}.pt\"),\n",
     "    show_progress_bar=True\n",
     ")\n",
     "\n",
-    "logging.info(f\"Model saved to {MODEL_SAVE_PATH}\")"
+    "logging.info(f\"Model saved to {SAVE_DIR / f\"{BASE_MODEL.split('/')[-1]}.pt\"}\")"
    ]
   },
   {
@@ -214,7 +223,14 @@
     "    train_dataset, dev_dataset, dev_df = load_data()\n",
     "\n",
     "    # Suggest hyperparameters via optuna\n",
-    "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 32])\n",
+    "    # batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 32])\n",
+    "    # warmup_steps = trial.suggest_int(\"warmup_steps\", 50, 200, step=50)\n",
+    "    # evaluation_steps = trial.suggest_int(\"evaluation_steps\", 500, 2000, step=500)\n",
+    "    # weight_decay = trial.suggest_float(\"weight_decay\", 1e-7, 1e-4, log=True)\n",
+    "    # lr = trial.suggest_float(\"lr\", 1e-6, 1e-3, log=True)\n",
+    "    # early_stopping_patience = trial.suggest_int(\"early_stopping_patience\", 3, 5)\n",
+    "\n",
+    "    batch_size = trial.suggest_categorical(\"batch_size\", [16])\n",
     "    warmup_steps = trial.suggest_int(\"warmup_steps\", 50, 200, step=50)\n",
     "    evaluation_steps = trial.suggest_int(\"evaluation_steps\", 500, 2000, step=500)\n",
     "    weight_decay = trial.suggest_float(\"weight_decay\", 1e-7, 1e-4, log=True)\n",
