chore: another aug file

--- a/src/notebooks/deberta/deberta_tune.ipynb
+++ b/src/notebooks/deberta/deberta_tune.ipynb
@@ -50,6 +50,7 @@
     "from datasets import Dataset as HFDataset\n",
     "from torch.optim import AdamW\n",
     "from torch.utils.data import DataLoader\n",
+    "import torch.nn.functional as F\n",
     "from tqdm import tqdm\n",
     "\n",
     "# Configure logging\n",
