feat: add model cards and update README

--- a/src/notebooks/model_cards/svm_model_card copy.ipynb
+++ b/src/notebooks/model_cards/svm_model_card copy.ipynb
@@ -76,28 +76,24 @@
         "    # the following lines were provided to give you an example value for each attribute\n",
         "    model_summary = '''This is a classification model that was trained to\n",
         "      detect whether the evidence provided supports the claim.''',\n",
-        "    model_description = '''This model is based upon the `microsoft/deberta-v3-large` model that was fine-tuned\n",
-        "      on 29k pairs of texts.''',\n",
+        "    model_description = '''This model is an SVM classifier that was trained on 29k pairs of texts.''',\n",
         "    developers = 'Harvey Dennis and William Asbery',\n",
-        "    base_model_repo = 'https://huggingface.co/microsoft/deberta-v3-base',\n",
-        "    base_model_paper = 'https://arxiv.org/pdf/2111.09543',\n",
         "    model_type = 'Supervised',\n",
-        "    model_architecture = 'Transformers',\n",
+        "    model_architecture = 'SVM',\n",
         "    language = 'English',\n",
-        "    base_model = 'deberta-v3-large',\n",
         "    training_data = '29K pairs of texts drawn from emails, news articles and blog posts (21.5K are original and 6.5K are augmented from the original texts).',\n",
         "    hyperparameters = '''\n",
-        "      - learning_rate: 5e-05\n",
-        "      - weight_decay: 0.03\n",
-        "      - warmup_ratio: 0.11\n",
-        "      - dropout_rate: 0.05\n",
-        "      - max_seq_length: 512\n",
-        "      - batch_size: 8\n",
-        "      - seed: 42\n",
-        "      - num_epochs: 8 (early stopping enabled)''',\n",
+        "      - embedding_dim: 300\n",
+        "      - ngram: 2\n",
+        "      - pca_components (SVD): ~500\n",
+        "      - vocab_size: 15000\n",
+        "      - C: ~2\n",
+        "      - kernel: rbf\n",
+        "      - use_tf_idf_weightings: True\n",
+        "      - gamma: scale\n",
+        "      - seed: 42''',\n",
         "    speeds_sizes_times = '''\n",
-        "      - overall training time (early stopping occurred): 1.5 hours\n",
-        "      - duration per training epoch: 30 minutes\n",
+        "      - overall training time: 3 hours\n",
         "      - model size: 10MB''',\n",
         "    testing_data = 'The development dataset provided, amounting to 6K pairs.',\n",
         "    testing_metrics = '''\n",
@@ -110,13 +106,15 @@
         "    hardware_requirements = '''\n",
         "      - RAM: at least 16 GB\n",
         "      - Storage: at least 2GB,\n",
-        "      - GPU: P100''',\n",
+        "      - CPU: M2 Macbook Pro''',\n",
         "    software = '''\n",
-        "      - Transformers 4.47.0\n",
-        "      - Pytorch 2.5.1+cu121\n",
-        "      - PEFT 0.14.0\n",
+        "      - Scikit-learn 1.3.2\n",
         "      - Optuna 4.2.1\n",
-        "      - Scikit-learn 1.2.2\n",
+        "      - NLTK 3.9.1\n",
+        "      - Scipy 1.7.0\n",
+        "      - Gensim 4.3.3\n",
+        "      - XGBoost 3.0.0\n",
+        "      - Googletrans 4.0.2\n",
         "    ''',\n",
         "    bias_risks_limitations = '''Any inputs (concatenation of two sequences) longer than\n",
         "      512 tokens will be truncated by the model.''',\n",
