chore: update model card with newest values

--- a/src/notebooks/model_cards/deberta_model_card.ipynb
+++ b/src/notebooks/model_cards/deberta_model_card.ipynb
@@ -11,20 +11,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from huggingface_hub import ModelCard, ModelCardData"
       ]
@@ -40,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,7 +97,14 @@
         "      - Weighted F1-score\n",
         "      - Accuracy\n",
         "      - MCC''',\n",
-        "    results = 'The model obtained an F1-score of 88.9% and an accuracy of 70%.',\n",
+        "    results = '''\n",
+        "    The model obtained:\n",
+        "      - Weighted Precision of 89.6%\n",
+        "      - Weighted Recall of 89.3%\n",
+        "      - Weighted F1-score of 89.4%\n",
+        "      - Accuracy of 89.3%\n",
+        "      - MCC of 0.74\n",
+        "    ''',\n",
         "    hardware_requirements = '''\n",
         "      - RAM: at least 16 GB\n",
         "      - Storage: at least 2GB,\n",
