--- a/src/notebooks/model_cards/svm_model_card.ipynb
+++ b/src/notebooks/model_cards/svm_model_card.ipynb
@@ -11,20 +11,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from huggingface_hub import ModelCard, ModelCardData"
       ]
@@ -40,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,9 +76,9 @@
         "    hyperparameters = '''\n",
         "      - embedding_dim: 300\n",
         "      - ngram: 2\n",
-        "      - pca_components (SVD): ~500\n",
-        "      - vocab_size: 15000\n",
-        "      - C: ~2\n",
+        "      - pca_components (SVD): 540\n",
+        "      - vocab_size: 12,000\n",
+        "      - C: 1.96\n",
         "      - kernel: rbf\n",
         "      - use_tf_idf_weightings: True\n",
         "      - gamma: scale\n",
@@ -102,7 +93,14 @@
         "      - Weighted F1-score\n",
         "      - Accuracy\n",
         "      - MCC''',\n",
-        "    results = 'The model obtained an F1-score of 88.9% and an accuracy of 70%.',\n",
+        "    results ='''\n",
+        "    The model obtained:\n",
+        "      - Weighted Precision of 82.7%\n",
+        "      - Weighted Recall of 82.5%\n",
+        "      - Weighted F1-score of 82.6%\n",
+        "      - Accuracy of 82.5%\n",
+        "      - MCC of 0.57\n",
+        "    ''',\n",
         "    hardware_requirements = '''\n",
         "      - RAM: at least 16 GB\n",
         "      - Storage: at least 2GB,\n",
