--- a/src/notebooks/model_cards/svm_model_card.ipynb
+++ b/src/notebooks/model_cards/svm_model_card.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -102,9 +102,9 @@
         "      - MCC of 0.57\n",
         "    ''',\n",
         "    hardware_requirements = '''\n",
-        "      - RAM: at least 16 GB\n",
-        "      - Storage: at least 2GB,\n",
-        "      - CPU: M2 Macbook Pro''',\n",
+        "      - RAM: at least 16 GB recommended\n",
+        "      - Storage: minimal (model size is relatively small),\n",
+        "      - CPU: standard CPU sufficient (no GPU required)''',\n",
         "    software = '''\n",
         "      - Scikit-learn 1.3.2\n",
         "      - Optuna 4.2.1\n",
@@ -121,7 +121,7 @@
         ")\n",
         "\n",
         "\n",
-        "with open('deberta_model_card.md', 'w') as model_card:\n",
+        "with open('svm_model_card.md', 'w') as model_card:\n",
         "  model_card.write(card.content)"
       ]
     }
