chore: update training and eval data sections

--- a/src/notebooks/model_cards/deberta_model_card.ipynb
+++ b/src/notebooks/model_cards/deberta_model_card.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -76,7 +76,7 @@
         "    model_architecture = 'Transformers',\n",
         "    language = 'English',\n",
         "    base_model = 'deberta-v3-large',\n",
-        "    training_data = '29K pairs of texts drawn from emails, news articles and blog posts (21.5K are original and 6.5K are augmented from the original texts).',\n",
+        "    training_data = 'All 21.5K pairs of texts provided as part of the ED training set and an additional 6.5K from augmentation.',\n",
         "    hyperparameters = '''\n",
         "      - learning_rate: 5e-05\n",
         "      - weight_decay: 0.03\n",
@@ -90,7 +90,7 @@
         "      - overall training time (early stopping occurred): 1.5 hours\n",
         "      - duration per training epoch: 30 minutes\n",
         "      - model size: 10MB''',\n",
-        "    testing_data = 'The development dataset provided, amounting to 6K pairs.',\n",
+        "    testing_data = 'The entire development dataset provided, amounting to 6K pairs.',\n",
         "    testing_metrics = '''\n",
         "      - Weighted Precision\n",
         "      - Weighted Recall\n",
