--- a/src/notebooks/model_cards/svm_model_card.ipynb
+++ b/src/notebooks/model_cards/svm_model_card.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -72,7 +72,7 @@
         "    model_type = 'Supervised',\n",
         "    model_architecture = 'SVM',\n",
         "    language = 'English',\n",
-        "    training_data = '29K pairs of texts drawn from emails, news articles and blog posts (21.5K are original and 6.5K are augmented from the original texts).',\n",
+        "    training_data = 'All 21.5K pairs of texts provided as part of the ED training set and an additional 6.5K from augmentation.',\n",
         "    hyperparameters = '''\n",
         "      - embedding_dim: 300\n",
         "      - ngram: 2\n",
@@ -86,7 +86,7 @@
         "    speeds_sizes_times = '''\n",
         "      - overall training time: 3 hours\n",
         "      - model size: 10MB''',\n",
-        "    testing_data = 'The development dataset provided, amounting to 6K pairs.',\n",
+        "    testing_data = 'The entire development dataset provided, amounting to 6K pairs.',\n",
         "    testing_metrics = '''\n",
         "      - Weighted Precision\n",
         "      - Weighted Recall\n",
