chore: pretty much complete svm notebook

--- a/src/notebooks/svm/svm.ipynb
+++ b/src/notebooks/svm/svm.ipynb
@@ -203,9 +203,267 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Augmentation\n",
+    "### Best Params from tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure logging\n",
+    "logger = logging.getLogger(__name__)\n",
     "\n",
-    "#### The following code cells on how the augmentation works DO NOT need to be run"
+    "params = {\n",
+    "    \"vocab_size\": 12000,\n",
+    "    \"n_gram_range\": (1, 2),\n",
+    "    \"embedding_dim\": 300,\n",
+    "    \"pca_components\": 540,\n",
+    "    \"C\": 1.96,\n",
+    "    \"tfidf_weighting\": True,\n",
+    "    \"min_df\": 1,\n",
+    "    \"max_df\": 0.95,\n",
+    "    \"kernel\": 'rbf',\n",
+    "    \"gamma\": 'scale'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_svm_data(data: pd.DataFrame, \n",
+    "                    remove_stopwords: bool = True, \n",
+    "                    lemmatize: bool = True, \n",
+    "                    min_freq: int = 2, \n",
+    "                    vocab_size: Optional[int] = None) -> Tuple[pd.DataFrame, np.ndarray, Set[str]]:\n",
+    "    \"\"\"\n",
+    "    Prepare text data for SVM training by cleaning, normalizing and vocabulary management.\n",
+    "    \n",
+    "    Args:\n",
+    "        data: DataFrame containing 'Claim' and 'Evidence' columns\n",
+    "        remove_stopwords: Whether to remove common stopwords\n",
+    "        lemmatize: Whether to apply lemmatization\n",
+    "        min_freq: Minimum frequency for words to be included in vocabulary\n",
+    "        vocab_size: Maximum vocabulary size (most frequent words kept)\n",
+    "    \n",
+    "    Returns:\n",
+    "        Tuple containing:\n",
+    "            - Processed DataFrame with added 'text' column\n",
+    "            - NumPy array of labels\n",
+    "            - Set of vocabulary words\n",
+    "    \"\"\"\n",
+    "    translator = str.maketrans('', '', string.punctuation)\n",
+    "\n",
+    "    def clean_text(text: str) -> str:\n",
+    "        \"\"\"\n",
+    "        Clean and normalize text by lowercasing, removing punctuation,\n",
+    "        and optionally removing stopwords and lemmatizing.\n",
+    "        \"\"\"\n",
+    "        text = text.lower().translate(translator)\n",
+    "        # Normalize whitespace\n",
+    "        text = \" \".join(text.split())\n",
+    "        \n",
+    "        if remove_stopwords:\n",
+    "            try:\n",
+    "                # Keep important discourse markers and modal verbs\n",
+    "                keep_words = {\n",
+    "                    'because', 'since', 'therefore', 'hence', 'thus', 'although',\n",
+    "                    'however', 'but', 'not', 'should', 'must', 'might', 'may',\n",
+    "                    'could', 'would', 'against', 'between', 'before', 'after'\n",
+    "                }\n",
+    "                custom_stopwords = set(stopwords.words(\"english\")) - keep_words\n",
+    "                \n",
+    "                text = \" \".join([word for word in text.split() \n",
+    "                               if word not in custom_stopwords])\n",
+    "            except Exception:\n",
+    "                pass\n",
+    "            \n",
+    "        if lemmatize:\n",
+    "            try:\n",
+    "                lemmatizer = WordNetLemmatizer()\n",
+    "                words = text.split()\n",
+    "                text = \" \".join([lemmatizer.lemmatize(word) for word in words])\n",
+    "            except Exception:\n",
+    "                pass\n",
+    "        return text\n",
+    "\n",
+    "    # Build vocabulary from training data\n",
+    "    train_samples = pd.concat([data['Claim'], data['Evidence']]).apply(clean_text)\n",
+    "    all_words = [word for text in train_samples for word in text.split()]\n",
+    "    word_counts = Counter(all_words)\n",
+    "\n",
+    "    # Filter words by minimum frequency and sort by frequency\n",
+    "    filtered_words = [(word, count) for word, count in word_counts.items() if count >= min_freq]\n",
+    "    sorted_words = sorted(filtered_words, key=lambda x: (-x[1], x[0]))\n",
+    "    \n",
+    "    # Apply vocabulary size limit if specified\n",
+    "    if vocab_size is not None:\n",
+    "        sorted_words = sorted_words[:vocab_size]\n",
+    "    \n",
+    "    vocab = {word for word, _ in sorted_words}\n",
+    "\n",
+    "    def replace_rare_words(text: str) -> str:\n",
+    "        \"\"\"Replace words not in vocabulary with <UNK> token.\"\"\"\n",
+    "        return ' '.join([word if word in vocab else '<UNK>' for word in text.split()])\n",
+    "\n",
+    "    # Process the data with UNK replacement\n",
+    "    data['text'] = (\"Claim: \" + data['Claim'].apply(clean_text).apply(replace_rare_words) + \n",
+    "                    \" [SEP] \" + \"Evidence: \" + data['Evidence'].apply(clean_text).apply(replace_rare_words))\n",
+    "\n",
+    "    # Extract labels\n",
+    "    labels = data['label'].values\n",
+    "\n",
+    "    return data, labels, vocab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prediction Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_with_saved_model(\n",
+    "    pipeline_path: Path, \n",
+    "    input_csv_path: Path, \n",
+    "    output_csv_path: Path\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Loads a saved SVM pipeline, makes predictions on data from an input CSV, \n",
+    "    and saves the predictions to an output CSV.\n",
+    "\n",
+    "    Args:\n",
+    "        pipeline_path: Path to the saved .pkl pipeline file.\n",
+    "        input_csv_path: Path to the input CSV file (must contain 'Evidence' column).\n",
+    "        output_csv_path: Path where the predictions CSV will be saved.\n",
+    "    \"\"\"\n",
+    "    logger.info(\"\\n\" + \"=\"*70)\n",
+    "    logger.info(f\"MAKING PREDICTIONS FROM {input_csv_path}\")\n",
+    "    logger.info(\"=\"*70)\n",
+    "\n",
+    "    # --- Input Validation ---\n",
+    "    if not pipeline_path.exists():\n",
+    "        logger.error(f\"Pipeline file not found at {pipeline_path}. Cannot make predictions.\")\n",
+    "        return\n",
+    "    if not input_csv_path.exists():\n",
+    "        logger.error(f\"Input CSV file not found at {input_csv_path}. Cannot make predictions.\")\n",
+    "        return\n",
+    "    \n",
+    "    # Ensure output directory exists\n",
+    "    output_csv_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    try:\n",
+    "        # --- Load Pipeline --- \n",
+    "        with open(pipeline_path, \"rb\") as f:\n",
+    "            loaded_pipeline = pickle.load(f)\n",
+    "        logger.info(f\"Pipeline loaded successfully from {pipeline_path}\")\n",
+    "\n",
+    "        # --- Load and Prepare Input Data ---\n",
+    "        input_df = pd.read_csv(input_csv_path)\n",
+    "        logger.info(f\"Loaded {len(input_df)} rows from {input_csv_path}\")\n",
+    "\n",
+    "        if 'Evidence' not in input_df.columns or 'Claim' not in input_df.columns:\n",
+    "            logger.error(f\"Input CSV {input_csv_path} must contain 'Evidence' and 'Claim' columns.\")\n",
+    "            return\n",
+    "            \n",
+    "\n",
+    "        # Determine training parameters needed for preprocessing\n",
+    "        training_vocab_size = params.get('vocab_size', 12000) \n",
+    "        logger.info(f\"Using parameters for preprocessing: vocab_size={training_vocab_size}\")\n",
+    "\n",
+    "\n",
+    "        # Apply the *exact same* preprocessing as used during training\n",
+    "        processed_data_df, _, _ = prepare_svm_data(\n",
+    "            input_df, \n",
+    "            remove_stopwords=True,\n",
+    "            lemmatize=True,        \n",
+    "            min_freq=2, \n",
+    "            vocab_size=training_vocab_size\n",
+    "        )\n",
+    "        processed_texts = processed_data_df['text'].tolist()\n",
+    "        logger.info(f\"Preprocessing complete for {len(processed_texts)} texts.\")\n",
+    "\n",
+    "        # --- Make Predictions --- \n",
+    "        predictions = loaded_pipeline.predict(processed_texts)\n",
+    "        logger.info(f\"Generated {len(predictions)} predictions.\")\n",
+    "\n",
+    "        # --- Save Predictions --- \n",
+    "        predictions_df = pd.DataFrame({'prediction': predictions})\n",
+    "        predictions_df.to_csv(output_csv_path, index=False)\n",
+    "        logger.info(f\"Predictions saved successfully to {output_csv_path}\")\n",
+    "\n",
+    "    except ModuleNotFoundError as e:\n",
+    "         logger.error(f\"Error loading pickle: A module required by the pickled object was not found: {e}\")\n",
+    "         logger.error(\"Ensure all necessary libraries and custom classes (GloveVectorizer, etc.) are importable.\")\n",
+    "    except FileNotFoundError as e:\n",
+    "        logger.error(f\"Error: A required file was not found: {e}\")\n",
+    "    except KeyError as e:\n",
+    "        logger.error(f\"Error: Missing expected column in input data: {e}\")\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"An error occurred during prediction: {e}\", exc_info=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prediction Generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_pickle_path = \"\"\n",
+    "\n",
+    "try:\n",
+    "    prediction_input_file = config.DEV_FILE\n",
+    "    prediction_output_file = config.DATA_DIR / \"svm_predictions.csv\"\n",
+    "    \n",
+    "    # Ensure the predictions directory exists\n",
+    "    prediction_output_file.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    predict_with_saved_model(\n",
+    "        pipeline_path=pipeline_pickle_path,\n",
+    "        input_csv_path=prediction_input_file, \n",
+    "        output_csv_path=prediction_output_file\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    logger.error(f\"Error predicting with saved model: {e}\", exc_info=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The code cells below show how we Augmented the data, trained the model and evaluated the final model\n",
+    "### These cells don't need to be run (and probably wont work if run, as we didn't use notebooks to complete the svm). They are to show the process of the svm creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Augmentation"
    ]
   },
   {
@@ -2400,6 +2658,101 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    precision_recall_fscore_support,\n",
+    "    matthews_corrcoef,\n",
+    "    confusion_matrix,\n",
+    ")\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "def compute_metrics(eval_pred):\n",
+    "    \"\"\"\n",
+    "    Calculate evaluation metrics for classification.\n",
+    "    \n",
+    "    Args:\n",
+    "        eval_pred: Tuple of predictions and labels\n",
+    "        \n",
+    "    Returns:\n",
+    "        dict: Dictionary of metrics including accuracy, precision, recall, F1, and MCC\n",
+    "    \"\"\"\n",
+    "    predictions, labels = eval_pred\n",
+    "    \n",
+    "    predictions = predictions.argmax(axis=1)\n",
+    "    \n",
+    "    accuracy = accuracy_score(labels, predictions)\n",
+    "    \n",
+    "    precision, recall, f1, _ = precision_recall_fscore_support(\n",
+    "        labels, predictions, average=None, zero_division=0\n",
+    "    )\n",
+    "    \n",
+    "    weighted_precision, weighted_recall, weighted_f1, _ = precision_recall_fscore_support(\n",
+    "        labels, predictions, average='weighted', zero_division=0\n",
+    "    )\n",
+    "    \n",
+    "    mcc = matthews_corrcoef(labels, predictions)\n",
+    "    \n",
+    "    metrics = {\n",
+    "        'Accuracy': accuracy,\n",
+    "        'Positive_Precision': precision[1] if len(precision) > 1 else 0,\n",
+    "        'Positive_Recall': recall[1] if len(recall) > 1 else 0,\n",
+    "        'Positive_F1': f1[1] if len(f1) > 1 else 0,\n",
+    "        'W Macro-P': weighted_precision,\n",
+    "        'W Macro-R': weighted_recall,\n",
+    "        'W Macro-F1': weighted_f1,\n",
+    "        'MCC': mcc\n",
+    "    }\n",
+    "    \n",
+    "    return metrics\n",
+    "\n",
+    "def plot_confusion_matrix(y_true, y_pred, save_path):\n",
+    "    \"\"\"\n",
+    "    Plot and save confusion matrix.\n",
+    "    \n",
+    "    Args:\n",
+    "        y_true: True labels\n",
+    "        y_pred: Predicted labels\n",
+    "        save_path: Path to save the confusion matrix plot\n",
+    "    \"\"\"\n",
+    "    cm = confusion_matrix(y_true, y_pred)\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=plt.cm.Blues)\n",
+    "    plt.title('Confusion Matrix')\n",
+    "    plt.colorbar()\n",
+    "    \n",
+    "    classes = ['Negative', 'Positive']\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "    \n",
+    "    cm_norm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "    \n",
+    "    thresh = cm.max() / 2.\n",
+    "    for i, j in np.ndindex(cm.shape):\n",
+    "        plt.text(j, i, f'{cm[i, j]}\\n({cm_norm[i, j]:.2f})',\n",
+    "                horizontalalignment=\"center\",\n",
+    "                color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')\n",
+    "    plt.savefig(save_path)\n",
+    "    plt.close()"
    ]
   }
  ],
