fix: readmes and model cards

--- a/src/notebooks/model_cards/deberta_model_card.ipynb
+++ b/src/notebooks/model_cards/deberta_model_card.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
         "    speeds_sizes_times = '''\n",
         "      - overall training time (early stopping occurred): 1.5 hours\n",
         "      - duration per training epoch: 30 minutes\n",
-        "      - model size: 10MB''',\n",
+        "      - model size: 4GB''',\n",
         "    testing_data = 'The entire development dataset provided, amounting to 6K pairs.',\n",
         "    testing_metrics = '''\n",
         "      - Weighted Precision\n",
@@ -107,7 +107,7 @@
         "    ''',\n",
         "    hardware_requirements = '''\n",
         "      - RAM: at least 16 GB\n",
-        "      - Storage: at least 2GB,\n",
+        "      - Storage: at least 5GB for model weights,\n",
         "      - GPU: P100''',\n",
         "    software = '''\n",
         "      - Transformers 4.47.0\n",
