--- a/src/notebooks/model_cards/svm_model_card.ipynb
+++ b/src/notebooks/model_cards/svm_model_card.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {
         "id": "inUOAq0Yy_O5"
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,7 +85,7 @@
         "      - seed: 42''',\n",
         "    speeds_sizes_times = '''\n",
         "      - overall training time: 3 hours\n",
-        "      - model size: 10MB''',\n",
+        "      - model size: 500MB''',\n",
         "    testing_data = 'The entire development dataset provided, amounting to 6K pairs.',\n",
         "    testing_metrics = '''\n",
         "      - Weighted Precision\n",
@@ -103,20 +103,14 @@
         "    ''',\n",
         "    hardware_requirements = '''\n",
         "      - RAM: at least 16 GB recommended\n",
-        "      - Storage: minimal (model size is relatively small),\n",
-        "      - CPU: standard CPU sufficient (no GPU required)''',\n",
+        "      - Storage: at least 1GB for model files,\n",
+        "      - CPU: standard CPU sufficient (we used a M2 Macbook Pro) (no GPU required)''',\n",
         "    software = '''\n",
         "      - Scikit-learn 1.3.2\n",
         "      - Optuna 4.2.1\n",
         "      - NLTK 3.9.1\n",
-        "      - Scipy 1.7.0\n",
-        "      - Gensim 4.3.3\n",
-        "      - XGBoost 3.0.0\n",
-        "      - Googletrans 4.0.2\n",
         "    ''',\n",
-        "    bias_risks_limitations = '''Any inputs (concatenation of two sequences) longer than\n",
-        "      512 tokens will be truncated by the model.''',\n",
-        "    additional_information = '''The hyperparameters for both the LoRA optimiser and model were determined by experimentation\n",
+        "    additional_information = '''The hyperparameters for model were determined by experimentation\n",
         "      with different values using Optuna and a TPE sampler.'''\n",
         ")\n",
         "\n",
