--- a/src/notebooks/svm/svm.ipynb
+++ b/src/notebooks/svm/svm.ipynb
@@ -28,17 +28,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in c:\\python311\\lib\\site-packages (1.6.1)\n",
+      "Requirement already satisfied: nltk in c:\\python311\\lib\\site-packages (3.9.1)\n",
+      "Requirement already satisfied: optuna in c:\\python311\\lib\\site-packages (4.2.1)\n",
+      "Requirement already satisfied: plotly in c:\\python311\\lib\\site-packages (6.0.1)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in c:\\python311\\lib\\site-packages (from scikit-learn) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in c:\\tools\\manim\\lib\\site-packages (from scikit-learn) (1.11.3)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\python311\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\python311\\lib\\site-packages (from scikit-learn) (3.5.0)\n",
+      "Requirement already satisfied: click in c:\\tools\\manim\\lib\\site-packages (from nltk) (8.1.7)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\python311\\lib\\site-packages (from nltk) (2024.11.6)\n",
+      "Requirement already satisfied: tqdm in c:\\tools\\manim\\lib\\site-packages (from nltk) (4.66.1)\n",
+      "Requirement already satisfied: alembic>=1.5.0 in c:\\python311\\lib\\site-packages (from optuna) (1.14.1)\n",
+      "Requirement already satisfied: colorlog in c:\\python311\\lib\\site-packages (from optuna) (6.9.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\python311\\lib\\site-packages (from optuna) (23.2)\n",
+      "Requirement already satisfied: sqlalchemy>=1.4.2 in c:\\python311\\lib\\site-packages (from optuna) (2.0.38)\n",
+      "Requirement already satisfied: PyYAML in c:\\python311\\lib\\site-packages (from optuna) (6.0.1)\n",
+      "Requirement already satisfied: narwhals>=1.15.1 in c:\\python311\\lib\\site-packages (from plotly) (1.34.1)\n",
+      "Requirement already satisfied: Mako in c:\\python311\\lib\\site-packages (from alembic>=1.5.0->optuna) (1.3.9)\n",
+      "Requirement already satisfied: typing-extensions>=4 in c:\\python311\\lib\\site-packages (from alembic>=1.5.0->optuna) (4.12.2)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\python311\\lib\\site-packages (from sqlalchemy>=1.4.2->optuna) (3.1.1)\n",
+      "Requirement already satisfied: colorama in c:\\tools\\manim\\lib\\site-packages (from click->nltk) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=0.9.2 in c:\\python311\\lib\\site-packages (from Mako->alembic>=1.5.0->optuna) (2.1.3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution ~animgl (C:\\Python311\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~animgl (C:\\Python311\\Lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install scikit-learn nltk optuna plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\willi\\Desktop\\Uni\\3rd_year\\NLU\\comp38412-not-broken\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01moptuna\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m show\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01moptuna\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpruners\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MedianPruner\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01moptuna\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msamplers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TPESampler\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'plotly'"
+     ]
+    }
+   ],
    "source": [
     "import gc\n",
     "import json\n",
     "import logging\n",
     "import time\n",
     "import pickle\n",
-    "from typing import Dict, List, Tuple, Union, Optional\n",
-    "\n",
+    "import psutil\n",
+    "import string\n",
     "import numpy as np\n",
     "import optuna\n",
     "import pandas as pd\n",
@@ -51,9 +117,6 @@
     "from sklearn.pipeline import Pipeline, FeatureUnion\n",
     "from sklearn.decomposition import PCA\n",
     "from pathlib import Path\n",
-    "import psutil\n",
-    "import time\n",
-    "import string\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from contextlib import contextmanager\n",
@@ -62,9 +125,8 @@
     "    precision_recall_fscore_support,\n",
     "    matthews_corrcoef\n",
     ")\n",
-    "import torch\n",
     "from collections import Counter\n",
-    "from typing import Optional, Tuple, Dict, Set"
+    "from typing import Dict, List, Tuple, Set, Optional\n"
    ]
   },
   {
@@ -2787,7 +2849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
